--- a/Intermediate+_days_45_to_57/Tindog/index.html
+++ b/Intermediate+_days_45_to_57/Tindog/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,13 +27,13 @@
         <div class="collapse navbar-collapse" id="navbarToggleDemo">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class=nav-item>
-              <a class="nav-link" href="#">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -188,9 +188,11 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+
+    <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-light btn-lg download-btn"><i class="fab fa-google-play"></i>Download</button>
+
 
   </section>
 
@@ -198,7 +200,10 @@
   <!-- Footer -->
 
   <footer id="footer">
-
+    <i class="social fab fa-facebook-f"></i>
+    <i class="social fab fa-twitter"></i>
+    <i class="social fab fa-instagram"></i>
+    <i class="social fas fa-envelope"></i>
     <p>© Copyright 2018 TinDog</p>
 
   </footer>
