udemy 100 days of code day 82 personal website  continued

--- a/Portfolio_Projects_Days_81_to_100/Day_82_WEB_Portfolio_Website/index.html
+++ b/Portfolio_Projects_Days_81_to_100/Day_82_WEB_Portfolio_Website/index.html
@@ -5,32 +5,143 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Falzon Folio</title>
+    <title>Fuzzle Folio</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 
 </head>
 
 <body>
     <!-- Header -->
+    <div class="header">
         <!-- NavBar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a href="#" class="navbar-brand">Fuzzle Folio</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+                    aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle Navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarContent">
+                    <ul class="navbar-nav ms-auto mb-lg-0">
+                        <li class="nav-item">
+                            <a href="" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="" class="nav-link">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="" class="nav-link">Page</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
+    </div>
     <!-- Banner     -->
+    <header class="masthead" style="background-image: url('assets/images/bg_image.jpg')">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="page-heading">
+                        <h1>Header Here</h1>
+                        <span class="subheading">This section can be used to put information. Possibly randomise or looped</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
 
     <!-- Highlights -->
+    <div class="container-fluid">
+        <div class="row highlights">
+            <h3>Highlights - Area to display random projects</h3>
+            <div class="card col-lg-4 col-md-5 col-12">
+                <img src="https://unsplash.it/200/100" alt="" srcset="">
+                <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ipsam veniam asperiores ad aspernatur molestiae fugiat nobis laudantium deleniti. Nihil voluptates molestiae, nobis inventore vero temporibus rem delectus ipsa incidunt.</p>
+                    <a href="" class="btn btn-secondary">Button</a>
+                </div>
+            </div>
+            <div class="card col-lg-4 col-md-5 col-12">
+                <img src="https://via.placeholder.com/100" alt="" srcset="">
+                <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ipsam veniam asperiores ad aspernatur molestiae fugiat nobis laudantium deleniti. Nihil voluptates molestiae, nobis inventore vero temporibus rem delectus ipsa incidunt.</p>
+                    <a href="" class="btn btn-secondary">Button</a>
+                </div>
+            </div>
+            <div class="card col-lg-4 col-md-5 col-12">
+                <img src="https://unsplash.it/200/100" alt="" srcset="">
+                <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ipsam veniam asperiores ad aspernatur molestiae fugiat nobis laudantium deleniti. Nihil voluptates molestiae, nobis inventore vero temporibus rem delectus ipsa incidunt.</p>
+                    <a href="" class="btn btn-secondary">Button</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Page Wide Heading -->
 
     <!-- Posts -->
 
+    <div class="container-fluid">
+        <div class="row highlights">
+            <h3 class="">Highlights - Area to display random projects</h3>
+            <div class="card col-lg-2 col-md-4 col-6">
+                <img src="https://unsplash.it/100/100" alt="" srcset="">
+                <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ipsam veniam asperiores ad aspernatur molestiae fugiat nobis laudantium deleniti. Nihil voluptates molestiae, nobis inventore vero temporibus rem delectus ipsa incidunt.</p>
+                    <a href="" class="btn btn-secondary">Button</a>
+                </div>
+            </div>
+            <div class="card col-lg-2 col-md-4 col-6">
+                <img src="https://unsplash.it/100/100" alt="" srcset="">
+                <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ipsam veniam asperiores ad aspernatur molestiae fugiat nobis laudantium deleniti. Nihil voluptates molestiae, nobis inventore vero temporibus rem delectus ipsa incidunt.</p>
+                    <a href="" class="btn btn-secondary">Button</a>
+                </div>
+            </div>
+            <div class="card col-lg-2 col-md-4 col-6">
+                <img src="https://unsplash.it/100/100" alt="" srcset="">
+                <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ipsam veniam asperiores ad aspernatur molestiae fugiat nobis laudantium deleniti. Nihil voluptates molestiae, nobis inventore vero temporibus rem delectus ipsa incidunt.</p>
+                    <a href="" class="btn btn-secondary">Button</a>
+                </div>
+            </div>
+            <div class="card col-lg-2 col-md-4 col-6">
+                <img src="https://unsplash.it/100/100" alt="" srcset="">
+                <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ipsam veniam asperiores ad aspernatur molestiae fugiat nobis laudantium deleniti. Nihil voluptates molestiae, nobis inventore vero temporibus rem delectus ipsa incidunt.</p>
+                    <a href="" class="btn btn-secondary">Button</a>
+                </div>
+            </div>
+            <div class="card col-lg-2 col-md-4 col-6">
+                <img src="https://unsplash.it/100/100" alt="" srcset="">
+                <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ipsam veniam asperiores ad aspernatur molestiae fugiat nobis laudantium deleniti. Nihil voluptates molestiae, nobis inventore vero temporibus rem delectus ipsa incidunt.</p>
+                    <a href="" class="btn btn-secondary">Button</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- CTA or Call To Arms -->
-        <!-- Do i need this? -->
+    <!-- Do i need this? -->
 
-        
+
     <!-- Footer -->
 
 
